--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,40 +10,57 @@
     <header class="header">
         <div class="logo">Olavo A</div>
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Shop</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="#inicio">Início</a>
+            <a href="#loja">Loja</a>
+            <a href="#sobre">Sobre</a>
+            <a href="#contato">Contato</a>
         </nav>
     </header>
 
-    <main class="shop">
-        <h1>Shop</h1>
-        <div class="products">
-            <!-- Card 1 -->
-            <div class="product-card">
-                <img src="https://via.placeholder.com/150" alt="Hoodie">
-                <h2>Hoodie</h2>
-                <p>$76.40</p>
+    <main>
+        <!-- Seção Início -->
+        <section id="inicio" class="section">
+            <h1>Bem-vindo à Olavo A</h1>
+            <p>A loja ideal para quem busca estilo e qualidade.</p>
+        </section>
+
+        <!-- Seção Loja -->
+        <section id="loja" class="section">
+            <h1>Loja</h1>
+            <div class="products">
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/150" alt="Moletom">
+                    <h2>Moletom</h2>
+                    <p>R$ 76,40</p>
+                </div>
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/150" alt="Vestido">
+                    <h2>Vestido</h2>
+                    <p>R$ 65,00</p>
+                </div>
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/150" alt="Terno Masculino">
+                    <h2>Terno Masculino</h2>
+                    <p>R$ 65,00</p>
+                </div>
             </div>
-            <!-- Card 2 -->
-            <div class="product-card">
-                <img src="https://via.placeholder.com/150" alt="Dress">
-                <h2>Dress</h2>
-                <p>$65.00</p>
-            </div>
-            <!-- Card 3 -->
-            <div class="product-card">
-                <img src="https://via.placeholder.com/150" alt="Suit">
-                <h2>Men's Suit</h2>
-                <p>$65.00</p>
-            </div>
-            <!-- Add more cards as needed -->
-        </div>
+        </section>
+
+        <!-- Seção Sobre -->
+        <section id="sobre" class="section">
+            <h1>Sobre Nós</h1>
+            <p>A Olavo A é dedicada a oferecer o melhor para nossos clientes. Estamos sempre aqui para você!</p>
+        </section>
+
+        <!-- Seção Contato -->
+        <section id="contato" class="section">
+            <h1>Contato</h1>
+            <p>Entre em contato conosco pelo e-mail: contato@olavoa.com</p>
+        </section>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 Olavo A. All rights reserved.</p>
+        <p>&copy; 2024 Olavo A. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
