--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
                     <h2>Terno Masculino</h2>
                     <p>R$ 65,00</p>
                 </div>
+                <!-- Mais três produtos -->
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/150" alt="Jaqueta">
+                    <h2>Jaqueta</h2>
+                    <p>R$ 120,00</p>
+                </div>
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/150" alt="Calça Jeans">
+                    <h2>Calça Jeans</h2>
+                    <p>R$ 85,00</p>
+                </div>
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/150" alt="Camisa Social">
+                    <h2>Camisa Social</h2>
+                    <p>R$ 99,90</p>
+                </div>
             </div>
         </section>
     </main>
