--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             <p>A loja ideal para quem busca estilo e qualidade.</p>
         </section>
 
+                <!-- Promoção -->
+        <section id="promocao" class="section">
+            <h2>Black Friday</h2>
+            <p>Aproveite descontos incríveis em toda a loja!</p>
+        </section>
+
+
         <!-- Seção Loja -->
         <section id="loja" class="section">
             <h1>Loja</h1>
