--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Cabeçalho -->
   <header>
     <div class="logo-container">
-      <img src="logo.png" alt="Logo Olavo's" class="logo">
+      <img src="logo.webp" alt="Logo Olavo's" class="logo">
       <h1>Olavo's</h1>
     </div>
     <nav>
@@ -30,32 +30,32 @@
     <!-- Produtos -->
     <section class="produtos">
       <div class="produto">
-        <div class="imagem-produto"><img src="moletom.jpg" alt="Moletom"></div>
+        <div class="imagem-produto"><img src="moletom.jpeg" alt="Moletom"></div>
         <p>Moletom</p>
         <p class="preco">R$ 76,40</p>
       </div>
       <div class="produto">
-        <div class="imagem-produto"><img src="vestido.jpg" alt="Vestido"></div>
+        <div class="imagem-produto"><img src="vestido.jpeg" alt="Vestido"></div>
         <p>Vestido</p>
         <p class="preco">R$ 65,00</p>
       </div>
       <div class="produto">
-        <div class="imagem-produto"><img src="terno.jpg" alt="Terno Masculino"></div>
+        <div class="imagem-produto"><img src="terno.webp" alt="Terno Masculino"></div>
         <p>Terno Masculino</p>
         <p class="preco">R$ 65,00</p>
       </div>
       <div class="produto">
-        <div class="imagem-produto"><img src="camisa.jpg" alt="Camisa Social"></div>
+        <div class="imagem-produto"><img src="camisa social.webp" alt="Camisa Social"></div>
         <p>Camisa Social</p>
         <p class="preco">R$ 55,00</p>
       </div>
       <div class="produto">
-        <div class="imagem-produto"><img src="jaqueta.jpg" alt="Jaqueta Jeans"></div>
+        <div class="imagem-produto"><img src="jaqueta.webp" alt="Jaqueta Jeans"></div>
         <p>Jaqueta Jeans</p>
         <p class="preco">R$ 120,00</p>
       </div>
       <div class="produto">
-        <div class="imagem-produto"><img src="calca.jpg" alt="Calça Slim"></div>
+        <div class="imagem-produto"><img src="blusa.webp" alt="Calça Slim"></div>
         <p>Calça Slim</p>
         <p class="preco">R$ 89,90</p>
       </div>
