--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p class="preco">R$ 65,00</p>
       </div>
       <div class="produto">
-        <div class="imagem-produto"><img src="terno.webp" alt="Terno Masculino"></div>
+        <div class="imagem-produto"><img src="img/terno.webp" alt="Terno Masculino"></div>
         <p>Terno Masculino</p>
         <p class="preco">R$ 65,00</p>
       </div>
